<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollViewAllItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_200"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_15"
                    app:cardCornerRadius="@dimen/dp_5"
                    app:cardElevation="@dimen/dp_5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <org.eazegraph.lib.charts.PieChart
                            android:id="@+id/piechart"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/dp_15"
                            android:layout_marginLeft="@dimen/dp_15"
                            android:layout_marginTop="@dimen/dp_15"
                            android:layout_marginBottom="@dimen/dp_15"
                            android:layout_weight="1"
                            android:padding="@dimen/dp_5" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/dp_15"
                            android:layout_marginTop="@dimen/dp_15"
                            android:layout_marginBottom="@dimen/dp_15"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:layout_marginStart="@dimen/dp_15"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp_15"
                                android:layout_marginTop="@dimen/dp_5"
                                android:gravity="center_vertical">

                                <View
                                    android:layout_width="@dimen/dp_15"
                                    android:layout_height="wrap_content"
                                    android:background="@color/md_yellow_900" />

                                <TextView
                                    android:text="@string/lbl_total_case"
                                    style="@style/tvLabelActivityMain"
                                    tools:ignore="RtlSymmetry" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp_15"
                                android:layout_marginTop="@dimen/dp_5"
                                android:gravity="center_vertical">

                                <View
                                    android:layout_width="@dimen/dp_15"
                                    android:layout_height="wrap_content"
                                    android:background="@color/md_green_600" />

                                <TextView
                                    style="@style/tvLabelActivityMain"
                                    android:text="@string/lbl_recovered_cases"
                                    tools:ignore="RtlSymmetry" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp_15"
                                android:layout_marginTop="@dimen/dp_5"
                                android:gravity="center_vertical">

                                <View
                                    android:layout_width="@dimen/dp_15"
                                    android:layout_height="wrap_content"
                                    android:background="@color/red" />

                                <TextView
                                    style="@style/tvLabelActivityMain"
                                    android:text="@string/lbl_deaths_cases"
                                    tools:ignore="RtlSymmetry" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp_15"
                                android:layout_marginTop="@dimen/dp_5"
                                android:gravity="center_vertical">

                                <View
                                    android:layout_width="@dimen/dp_15"
                                    android:layout_height="wrap_content"
                                    android:background="@color/md_blue_200" />

                                <TextView
                                    style="@style/tvLabelActivityMain"
                                    android:text="@string/lbl_active_cases"
                                    tools:ignore="RtlSymmetry" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_weight="2"
                    app:cardCornerRadius="@dimen/dp_5"
                    app:cardElevation="@dimen/dp_5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <com.leo.simplearcloader.SimpleArcLoader
                            android:id="@+id/loader"
                            android:layout_width="@dimen/dp_60"
                            android:layout_height="@dimen/dp_60"
                            android:visibility="visible"
                            app:arc_style="simple_arc" />

                        <ScrollView
                            android:id="@+id/svStats"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="gone"
                            tools:ignore="NestedScrolling">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/dp_10"
                                    android:gravity="center"
                                    android:text="@string/lbl_global_stats"
                                    android:textAllCaps="true"
                                    android:textColor="@color/gray"
                                    android:textSize="@dimen/sp_20"
                                    android:textStyle="bold" />

                                <View
                                    style="@style/viewCountryDetail"
                                    android:layout_marginTop="@dimen/dp_5" />

                                <LinearLayout style="@style/llCasesRowActivityMain">

                                    <TextView
                                        android:text="@string/lbl_cases"
                                        style="@style/tvLabelStyleCountryDetail"
                                        tools:ignore="TooDeepLayout" />

                                    <TextView
                                        android:id="@+id/tvCasesCounts"
                                        style="@style/tvValuesStyleCountryDetail"
                                        android:text="@string/lbl_0"
                                        tools:ignore="RtlHardcoded" />
                                </LinearLayout>

                                <View style="@style/viewCountryDetail" />

                                <LinearLayout style="@style/llCasesRowActivityMain">

                                    <TextView
                                        android:text="@string/lbl_recovered_cases"
                                        style="@style/tvLabelStyleCountryDetail" />

                                    <TextView
                                        android:id="@+id/tvRecoveredCase"
                                        style="@style/tvValuesStyleCountryDetail"
                                        android:text="@string/lbl_0"
                                        tools:ignore="RtlHardcoded" />
                                </LinearLayout>

                                <View style="@style/viewCountryDetail" />

                                <LinearLayout style="@style/llCasesRowActivityMain">

                                    <TextView
                                        android:text="@string/lbl_critical_cases"
                                        style="@style/tvLabelStyleCountryDetail" />

                                    <TextView
                                        android:id="@+id/tvCriticalCase"
                                        style="@style/tvValuesStyleCountryDetail"
                                        android:text="@string/lbl_0"
                                        tools:ignore="RtlHardcoded" />
                                </LinearLayout>

                                <View style="@style/viewCountryDetail" />

                                <LinearLayout style="@style/llCasesRowActivityMain">

                                    <TextView
                                        android:text="@string/lbl_active_cases"
                                        style="@style/tvLabelStyleCountryDetail" />

                                    <TextView
                                        android:id="@+id/tvActiveCase"
                                        style="@style/tvValuesStyleCountryDetail"
                                        android:text="@string/lbl_0"
                                        tools:ignore="RtlHardcoded" />
                                </LinearLayout>

                                <View style="@style/viewCountryDetail" />

                                <LinearLayout style="@style/llCasesRowActivityMain">

                                    <TextView
                                        android:text="@string/lbl_today_cases"
                                        style="@style/tvLabelStyleCountryDetail" />

                                    <TextView
                                        android:id="@+id/tvTodayCases"
                                        style="@style/tvValuesStyleCountryDetail"
                                        android:text="@string/lbl_0"
                                        tools:ignore="RtlHardcoded" />
                                </LinearLayout>

                                <View style="@style/viewCountryDetail" />

                                <LinearLayout style="@style/llCasesRowActivityMain">

                                    <TextView
                                        android:text="@string/lbl_total_deaths"
                                        style="@style/tvLabelStyleCountryDetail" />

                                    <TextView
                                        android:id="@+id/tvTotalDeaths"
                                        style="@style/tvValuesStyleCountryDetail"
                                        android:text="@string/lbl_0"
                                        tools:ignore="RtlHardcoded" />
                                </LinearLayout>

                                <View style="@style/viewCountryDetail" />

                                <LinearLayout style="@style/llCasesRowActivityMain">

                                    <TextView
                                        android:text="@string/lbl_today_deaths"
                                        style="@style/tvLabelStyleCountryDetail" />

                                    <TextView
                                        android:id="@+id/tvTodayDeaths"
                                        style="@style/tvValuesStyleCountryDetail"
                                        android:text="@string/lbl_0"
                                        tools:ignore="RtlHardcoded" />
                                </LinearLayout>

                                <View style="@style/viewCountryDetail" />

                                <LinearLayout style="@style/llCasesRowActivityMain">

                                    <TextView
                                        android:text="@string/lbl_affected_countries"
                                        style="@style/tvLabelStyleCountryDetail" />

                                    <TextView
                                        android:id="@+id/tvAffectedCountries"
                                        style="@style/tvValuesStyleCountryDetail"
                                        android:text="@string/lbl_0"
                                        tools:ignore="RtlHardcoded" />
                                </LinearLayout>

                                <View style="@style/viewCountryDetail" />

                            </LinearLayout>
                        </ScrollView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnTrackCountries"
                        style="@style/btnSplashScreens"
                        android:layout_marginBottom="@dimen/dp_25"
                        android:background="@drawable/button_border"

                        android:text="@string/lbl_track_countries"
                        tools:ignore="OnClick" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>