<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Country_detail">

    <ScrollView
        android:id="@+id/scCountryDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCountryImage"
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_200"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_5"
                android:contentDescription="@string/todo"
                android:padding="@dimen/dp_5"
                android:paddingStart="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_country"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tvCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/lbl_0"
                    android:textColor="@color/md_deep_orange_A100"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_cases"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tvCase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/lbl_0"
                    android:textColor="@color/md_deep_orange_A100"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_today_cases"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tvTodayCase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/lbl_0"
                    android:textColor="@color/md_deep_orange_A100"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_deaths"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tvDeaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/lbl_0"
                    android:textColor="@color/md_deep_orange_A100"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_today_deaths"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tvTodayDeaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/lbl_0"
                    android:textColor="@color/md_deep_orange_A100"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_recovered_cases"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tvRecoveredCase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/lbl_0"
                    android:textColor="@color/md_deep_orange_A100"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_active_cases"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tvActiveCase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/lbl_0"
                    android:textColor="@color/md_deep_orange_A100"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_affected_countries"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tvCriticalCase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/lbl_0"
                    android:textColor="@color/md_deep_orange_A100"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@color/gray" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>